packages/build/tests/error/fixtures/fail_build_post_deploy/plugin.js
module.exports = {
  async onEnd({
    utils: {
      build: { failBuild },
    },
  }) {
    failBuild('test')
  },
}
